<resources>
    <string name="app_name">云书包老师版HD</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="add">添加</string>
    <!--首页start-->
    <string name="first_page">首页</string>
    <string name="clazz">班级</string>
    <string name="mine">我的</string>
    <string name="share_screen">同屏</string>
    <string name="class_test">课堂检测\nClassroom test</string>
    <string name="after_class">课后作业\nHomework after class</string>
    <string name="test_paper">考试试卷\nExamination</string>
    <string name="check_homework">检查作业\nTesting work</string>
    <string name="my_book">我的课本\nMy textbook</string>
    <string name="my_prepare">我的备课\nPrepare lessons</string>
    <string name="study_room">自习室\nStudy room</string>
    <string name="homework_schedule">作业进度</string>
    <!--首页end-->
    <!--布置作业start-->
    <string name="preview">预览</string>
    <string name="text_book">教材</string>
    <string name="exchange_textbook">更换教材</string>
    <string name="textbook_name">%1$s - %2$s - %3$s</string>
    <string name="first_semester">上学期</string>
    <string name="second_semester">下学期</string>
    <string name="difficulty">难度</string>
    <string name="unlimited">不限</string>
    <string name="easy">容易</string>
    <string name="secondary">中等</string>
    <string name="hard">困难</string>
    <string name="assign_class_test">课堂检测</string>
    <string name="assign_after_class">课后作业</string>
    <string name="assign_system_test_paper">系统试卷</string>
    <string name="assign_my_test_paper">我的试卷</string>
    <string name="wrong_question_feedback">错题反馈</string>
    <string name="wrong_question_feedback_hint">如果您发现题目错误，请及时反馈给我们，感谢您的大力支持</string>
    <array name="bottom_work">
        <item>智能推送</item>
        <item>自定义</item>
        <item>发布小组</item>
        <item>发布班级</item>
    </array>
    <array name="bottom_test">
        <item>系统试卷</item>
        <item>组卷</item>
        <item>我的试卷</item>
        <item>发布小组</item>
        <item>发布班级</item>
    </array>
    <!--布置作业end-->
    <!--班级start-->
    <string name="desc">班级邀请码：%1$s\n班级学生：%2$d人</string>
    <string name="add_teacher">添加老师</string>
    <string name="class_space">班级空间</string>
    <string name="create_class">创建班级</string>
    <string name="teacher_bag_number_hint">请输入老师书包号</string>
    <string name="class_photos">班级相册</string>
    <string name="study_group">学习小组</string>
    <string name="course_schedule">课程表</string>
    <string name="course_teaching">所教课程</string>
    <string name="class_expression">课堂表现</string>
    <string name="notice">公告通知：</string>
    <string name="notice_history">公告历史</string>
    <string name="publish_notice">发布公告</string>
    <string name="notice_time">发布时间：%1$s</string>
    <string name="empty_notice">暂无公告</string>
    <!--班级end-->
    <!--创建班级start-->
    <string name="school">学校</string>
    <string name="grade">年级</string>
    <string name="course">课程</string>
    <string name="city">城市</string>
    <string name="phase">阶段</string>
    <string name="campus">校区</string>
    <string name="select_school_hint">请选择学校</string>
    <string name="select_grade_hint">请选择年级</string>
    <string name="select_class_hint">请输入班别：例如“1班”</string>
    <string name="select_course_hint">请选择课程</string>
    <string name="select_city_hint">请选择所在城市</string>
    <string name="select_phase_hint">请选择教育阶段</string>
    <!--创建班级end-->
    <!--我的start-->
    <string name="bag_number">书包号：%1$s</string>
    <string name="personal_info">个人信息</string>
    <string name="my_shop">我的商城</string>
    <string name="operation">操作指南</string>
    <string name="system_setting">系统设置</string>
    <string name="setting">设置</string>
    <!--我的end-->
    <!--设置start-->
    <string name="version_update">版本更新</string>
    <string name="office_notice">官方公告</string>
    <string name="user_feedback">用户反馈</string>
    <string name="about_us">关于我们</string>
    <string name="exit_login">退出登录</string>
    <!--设置end-->
    <!--个人信息start-->
    <string name="head_image">头像</string>
    <string name="name">姓名</string>
    <string name="bag">书包号</string>
    <string name="sex">性别</string>
    <string name="contact_information">联系方式</string>
    <string name="family_address">家庭住址</string>
    <string name="school_name">所在学校</string>
    <!--个人信息end-->
    <!--学习小组start-->
    <string name="create_group">创建小组</string>
    <string name="manage_group">管理小组</string>
    <string name="delete_group">删除小组</string>
    <string name="student_count">学生人数：%1$d人</string>
    <string name="group_name_hint">请输入小组名称</string>
    <string name="group_name_info">请选择小组成员</string>
    <string name="group_member">小组成员 长按设置组长</string>
    <string name="set_group_leader">设置为组长</string>
    <string name="cancel_group_leader">取消设置组长</string>
    <!--学习小组end-->
    <!--选题start-->
    <string name="question_analysis">试题解析</string>
    <string name="answer_analyse">答案解析：</string>
    <string name="next_page">下一页</string>
    <string name="preview_page">上一页</string>
    <string name="publish">发布</string>
    <!--选题end-->
    <!--布置作业start-->
    <string name="dead_time">截止时间：</string>
    <string name="work_attention">作业注意事项：</string>
    <string name="select_group">选择小组</string>
    <!--布置作业end-->
</resources>
