<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yzy.ebag.teacher.activity.PersonalInfoActivity"
    android:orientation="vertical"
    >
    <ebag.hd.widget.TitleBar android:id="@+id/titleBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:titleText="@string/personal_info"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/personal_info_bg"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/x300"
            android:layout_marginRight="@dimen/x300"
            >
            <!--头像-->
            <LinearLayout android:id="@+id/headImageBtn"
                style="@style/personal_info_ll_btn"
                >
                <TextView style="@style/personal_info_left_tv"
                    android:text="@string/head_image"
                    />
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />
                <ImageView android:id="@+id/headImage"
                    android:layout_width="@dimen/x100"
                    android:layout_height="@dimen/x100"
                    android:layout_marginTop="@dimen/y10"
                    android:layout_marginBottom="@dimen/y10"
                    android:background="@drawable/blue_round_stroke"
                    android:padding="1dp"
                    />
            </LinearLayout>
            <View style="@style/personal_info_line"/>
            <!--姓名-->
            <LinearLayout android:id="@+id/nameBtn"
                style="@style/personal_info_ll_btn"
                >
                <TextView style="@style/personal_info_left_tv"
                    android:text="@string/name"
                    />
                <ebag.core.widget.drawable.DrawableTextView android:id="@+id/name"
                    style="@style/personal_info_right_tv"
                    />
            </LinearLayout>
            <View style="@style/personal_info_line"/>
            <!--书包号-->
            <LinearLayout android:id="@+id/bagBtn"
                style="@style/personal_info_ll_btn"
                >
                <TextView style="@style/personal_info_left_tv"
                    android:text="@string/bag"
                    />
                <ebag.core.widget.drawable.DrawableTextView android:id="@+id/bag"
                    style="@style/personal_info_right_tv"
                    />
            </LinearLayout>
            <View style="@style/personal_info_line"/>
            <!--性别-->
            <LinearLayout android:id="@+id/sexBtn"
                style="@style/personal_info_ll_btn"
                >
                <TextView style="@style/personal_info_left_tv"
                    android:text="@string/sex"
                    />
                <ebag.core.widget.drawable.DrawableTextView android:id="@+id/sex"
                    style="@style/personal_info_right_tv"
                    />
            </LinearLayout>
            <View style="@style/personal_info_line"/>
            <!--联系方式-->
            <LinearLayout android:id="@+id/contactBtn"
                style="@style/personal_info_ll_btn"
                >
                <TextView style="@style/personal_info_left_tv"
                    android:text="@string/contact_information"
                    />
                <ebag.core.widget.drawable.DrawableTextView android:id="@+id/contactInformation"
                    style="@style/personal_info_right_tv"
                    />
            </LinearLayout>
            <View style="@style/personal_info_line"/>
            <!--家庭住址-->
            <LinearLayout android:id="@+id/addressBtn"
                style="@style/personal_info_ll_btn"
                >
                <TextView style="@style/personal_info_left_tv"
                    android:text="@string/family_address"
                    />
                <ebag.core.widget.drawable.DrawableTextView android:id="@+id/familyAddress"
                    style="@style/personal_info_right_tv"
                    />
            </LinearLayout>
            <View style="@style/personal_info_line"/>
            <!--所在学校-->
            <LinearLayout android:id="@+id/schoolBtn"
                style="@style/personal_info_ll_btn"
                >
                <TextView style="@style/personal_info_left_tv"
                    android:text="@string/school_name"
                    />
                <ebag.core.widget.drawable.DrawableTextView android:id="@+id/schoolName"
                    style="@style/personal_info_right_tv"
                    />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
