<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background"
    >
    <ebag.hd.widget.TitleBar android:id="@+id/titleBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:titleText="@string/class_space"
        />
    <TextView android:id="@+id/bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/space_bg_img"
        android:layout_marginStart="@dimen/x20"
        android:layout_marginEnd="@dimen/x20"
        android:layout_marginTop="@dimen/y15"
        app:layout_constraintTop_toBottomOf="@id/titleBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintDimensionRatio="H,10:2.5"
        />
    <TextView android:id="@+id/notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_normal"
        android:text="@string/notice"
        android:gravity="center"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        android:layout_marginTop="@dimen/y10"
        app:layout_constraintStart_toStartOf="@id/bg"
        app:layout_constraintTop_toTopOf="@id/bg"
        />
    <TextView android:id="@+id/teacherName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_third"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        android:layout_marginTop="@dimen/y10"
        tools:text="英语老师：李老师"
        app:layout_constraintTop_toBottomOf="@id/notice"
        app:layout_constraintLeft_toLeftOf="@id/bg"
        />
    <TextView android:id="@+id/noticeTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_third"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        android:layout_marginTop="@dimen/y10"
        tools:text="发布时间：2017-01-01 24:00:00"
        app:layout_constraintTop_toBottomOf="@id/notice"
        app:layout_constraintLeft_toRightOf="@id/teacherName"
        />
    <TextView android:id="@+id/descTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tv_sub"
        android:textColor="@color/white"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        app:layout_constraintTop_toBottomOf="@id/teacherName"
        app:layout_constraintStart_toStartOf="@id/bg"
        app:layout_constraintEnd_toEndOf="@id/bg"
        />
    <TextView android:id="@+id/noticeHistoryBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/y70"
        android:gravity="center"
        android:textColor="@color/desc_blue"
        android:textSize="@dimen/tv_big"
        android:text="@string/notice_history"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/bg"
        app:layout_constraintBottom_toBottomOf="@id/bg"
        app:layout_constraintEnd_toStartOf="@id/publishNoticeBtn"
        />
    <TextView android:id="@+id/publishNoticeBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/y70"
        android:gravity="center"
        android:textColor="@color/desc_blue"
        android:textSize="@dimen/tv_big"
        android:text="@string/publish_notice"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/noticeHistoryBtn"
        app:layout_constraintBottom_toBottomOf="@id/bg"
        app:layout_constraintEnd_toEndOf="@id/bg"
        />
    <View
        android:layout_width="5dp"
        android:layout_height="@dimen/y30"
        android:background="@color/desc_blue"
        app:layout_constraintTop_toTopOf="@id/noticeHistoryBtn"
        app:layout_constraintBottom_toBottomOf="@id/bg"
        app:layout_constraintStart_toStartOf="@id/bg"
        app:layout_constraintEnd_toEndOf="@id/bg"
        />
    <ebag.hd.widget.drawable.DrawableTextView android:id="@+id/classPhotos"
        style="@style/space_tv_btn"
        android:text="@string/class_photos"
        app:leftDrawable="@drawable/space_photos"
        app:layout_constraintTop_toBottomOf="@id/bg"
        app:layout_constraintBottom_toTopOf="@id/courseSchedule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/chat"
        />
    <ebag.hd.widget.drawable.DrawableTextView android:id="@+id/chat"
        style="@style/space_tv_btn"
        app:leftDrawable="@drawable/space_chat"
        app:layout_constraintTop_toBottomOf="@id/bg"
        app:layout_constraintBottom_toTopOf="@id/courseSchedule"
        app:layout_constraintStart_toEndOf="@id/classPhotos"
        app:layout_constraintEnd_toStartOf="@id/studyGroup"
        />
    <ebag.hd.widget.drawable.DrawableTextView android:id="@+id/studyGroup"
        style="@style/space_tv_btn"
        android:text="@string/study_group"
        app:leftDrawable="@drawable/space_study_group"
        app:layout_constraintTop_toBottomOf="@id/bg"
        app:layout_constraintBottom_toTopOf="@id/courseSchedule"
        app:layout_constraintStart_toEndOf="@id/chat"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ebag.hd.widget.drawable.DrawableTextView android:id="@+id/courseSchedule"
        style="@style/space_tv_btn"
        android:text="@string/course_schedule"
        app:leftDrawable="@drawable/space_course_schedule"
        app:layout_constraintTop_toBottomOf="@id/classPhotos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/course"
        />
    <ebag.hd.widget.drawable.DrawableTextView android:id="@+id/course"
        style="@style/space_tv_btn"
        android:text="@string/course_teaching"
        app:leftDrawable="@drawable/space_course"
        app:layout_constraintTop_toBottomOf="@id/chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/courseSchedule"
        app:layout_constraintEnd_toStartOf="@id/expression"
        />
    <ebag.hd.widget.drawable.DrawableTextView android:id="@+id/expression"
        style="@style/space_tv_btn"
        android:text="@string/class_expression"
        app:leftDrawable="@drawable/space_expression"
        app:layout_constraintTop_toBottomOf="@id/chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/course"
        app:layout_constraintEnd_toEndOf="parent"
        />
</android.support.constraint.ConstraintLayout>