<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background"
    >
    <TextView android:id="@+id/bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/mine_bg_img"
        android:layout_marginStart="@dimen/x16"
        android:layout_marginEnd="@dimen/x16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintDimensionRatio="H,10:2.7"
        />
    <ImageView android:id="@+id/headImg"
        android:layout_width="@dimen/x100"
        android:layout_height="@dimen/x100"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="@id/bg"
        app:layout_constraintBottom_toBottomOf="@id/bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.27"
        />
    <!--<TextView android:id="@+id/subjectTv"
        android:layout_width="@dimen/x25"
        android:layout_height="@dimen/x25"
        android:background="@drawable/green_point"
        android:gravity="center"
        android:textColor="@color/white"
        tools:text="英"
        app:layout_constraintEnd_toEndOf="@id/headImg"
        app:layout_constraintBottom_toBottomOf="@id/headImg"
        />-->
    <TextView android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y15"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="@dimen/tv_normal"
        tools:text="李老师"
        app:layout_constraintTop_toBottomOf="@id/headImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView android:id="@+id/bagNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/y5"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="@dimen/tv_normal"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ebag.core.widget.drawable.DrawableTextView android:id="@+id/personalInfo"
        style="@style/mine_tv_btn"
        android:text="@string/personal_info"
        app:leftDrawable="@drawable/mine_personal_info"
        app:layout_constraintTop_toBottomOf="@id/bg"
        app:layout_constraintBottom_toTopOf="@id/operation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/myShop"
        />
    <ebag.core.widget.drawable.DrawableTextView android:id="@+id/myShop"
        style="@style/mine_tv_btn"
        android:text="@string/my_shop"
        app:leftDrawable="@drawable/mine_shop"
        app:layout_constraintTop_toBottomOf="@id/bg"
        app:layout_constraintBottom_toTopOf="@id/operation"
        app:layout_constraintStart_toEndOf="@id/personalInfo"
        app:layout_constraintEnd_toStartOf="@id/operation"
        />
    <ebag.core.widget.drawable.DrawableTextView android:id="@+id/setting"
        style="@style/mine_tv_btn"
        android:text="@string/setting"
        app:leftDrawable="@drawable/mine_setting"
        app:layout_constraintTop_toBottomOf="@id/bg"
        app:layout_constraintBottom_toTopOf="@id/operation"
        app:layout_constraintStart_toEndOf="@id/myShop"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ebag.core.widget.drawable.DrawableTextView android:id="@+id/systemSetting"
        style="@style/mine_tv_btn"
        android:text="@string/system_setting"
        app:leftDrawable="@drawable/mine_system_setting"
        app:layout_constraintTop_toBottomOf="@id/personalInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/setting"
        android:visibility="gone"
        />
    <ebag.core.widget.drawable.DrawableTextView android:id="@+id/operation"
        style="@style/mine_tv_btn"
        android:text="@string/operation"
        app:leftDrawable="@drawable/mine_operation"
        app:layout_constraintTop_toBottomOf="@id/personalInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/personalInfo"
        android:visibility="invisible"
        />
</android.support.constraint.ConstraintLayout>